include/my_pthread.h
@@ -279,6 +279,8 @@ int sigwait(sigset_t *setp, int *sigp);		/* Use our implemention */
 #define my_pthread_setprio(A,B) pthread_setprio_np((A),(B))
 #elif defined(HAVE_PTHREAD_SETPRIO)
 #define my_pthread_setprio(A,B) pthread_setprio((A),(B))
+#elif defined(HAVE_PTHREAD_SETSCHEDPRIO)
+#define my_pthread_setprio(A,B) pthread_setschedprio((A),(B))
 #else
 extern void my_pthread_setprio(pthread_t thread_id,int prior);
 #endif
